Regression: Bones using Empties as Custom Shapes cannot be selected properly #99270

Closed
opened 2022-06-29 16:11:10 +02:00 by Christiaan Moleman · 17 comments

System Information
Operating system: Win 10 Home 64 bit
Graphics card: Nvidia Geforce 1050 Ti

Blender Version
Broken: 3.2
Worked: 3.1.2

Caused by 3267c91b4d

Short description of error

If you use an Empty instead of a Mesh (with the same shape) as the Custom Shape for a Bone, as of version 3.2 (and still in 3.3 alpha) the bone cannot be selected properly in Pose Mode.

Its selection hitbox seems to only cover the original shape of the bone instead of the shape of the Custom Object as you would expect, ie if you set a Cube empty as the custom shape you still have to click where the actual bone is to select it, instead of clicking on the edges of the Cube shape. If you use a Cube mesh instead of an Empty as the Custom Shape it behaves normally and you can select by clicking on the visible custom shape. In 3.1.2 it did not matter whether you used an Empty or a Mesh for the Custom Shape.

Steps to reproduce

**System Information** Operating system: Win 10 Home 64 bit Graphics card: Nvidia Geforce 1050 Ti **Blender Version** Broken: 3.2 Worked: 3.1.2 Caused by 3267c91b4d **Short description of error** If you use an **Empty** instead of a **Mesh** (with the same shape) as the **Custom Shape** for a Bone, as of version 3.2 (and still in 3.3 alpha) the bone cannot be selected properly in Pose Mode. Its selection hitbox seems to only cover the original shape of the bone instead of the shape of the Custom Object as you would expect, ie if you set a Cube empty as the custom shape you still have to click where the actual bone is to select it, instead of clicking on the edges of the Cube shape. If you use a Cube mesh instead of an Empty as the Custom Shape it behaves normally and you can select by clicking on the visible custom shape. In 3.1.2 it did not matter whether you used an Empty or a Mesh for the Custom Shape. **Steps to reproduce** - open .blend file - Try selecting bones where empties are used as custom shape [empty_vs_mesh_customshapes.blend](https://archive.blender.org/developer/F13238243/empty_vs_mesh_customshapes.blend) [emptyshape_bone_selection_01.mp4](https://archive.blender.org/developer/F13238248/emptyshape_bone_selection_01.mp4)

Added subscriber: @ChristiaanMoleman

Added subscriber: @ChristiaanMoleman

#99708 was marked as duplicate of this issue

#99708 was marked as duplicate of this issue

#99512 was marked as duplicate of this issue

#99512 was marked as duplicate of this issue

empty_vs_mesh_customshapes.blend

Here is a scene I made to test this in isolation.

[empty_vs_mesh_customshapes.blend](https://archive.blender.org/developer/F13238243/empty_vs_mesh_customshapes.blend) Here is a scene I made to test this in isolation.

See this video for a demonstration:

emptyshape_bone_selection_01.mp4

See this video for a demonstration: [emptyshape_bone_selection_01.mp4](https://archive.blender.org/developer/F13238248/emptyshape_bone_selection_01.mp4)
Pratik Borhade changed title from Bones using Empties as Custom Shapes cannot be selected properly to Regression: Bones using Empties as Custom Shapes cannot be selected properly 2022-06-30 08:57:52 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk
Member

Caused by 3267c91b4d

CC @ideasman42

Caused by 3267c91b4d CC @ideasman42
Member

Well, there is no BoundingBox for empties, so I assume we gotta make a special dummy for empties in BKE_object_boundbox_get or just make an exception in pchan_culling_test_custom for empties (always returning true, thus always drawing them [for selection])?

Well, there is no BoundingBox for empties, so I assume we gotta make a special dummy for empties in `BKE_object_boundbox_get` or just make an exception in `pchan_culling_test_custom` for empties (always returning true, thus always drawing them [for selection])?
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

I have asked in #blender-coders:

would it be OK to give empties a boundingbox in BKE_object_boundbox_get based on their empty_display_size & empty_display_type? (boundingbox is used in viewport culling bones, ref. https://developer.blender.org/T99270 )

here the note from @JulianEisel :

I'd keep that separate from real, geometry based bounding boxes, so could be BKE_object_visual_boundbox_get()

I have asked in #blender-coders: > would it be OK to give empties a boundingbox in `BKE_object_boundbox_get` based on their `empty_display_size` & `empty_display_type`? (boundingbox is used in viewport culling bones, ref. https://developer.blender.org/T99270 ) here the note from @JulianEisel : > I'd keep that separate from real, geometry based bounding boxes, so could be BKE_object_visual_boundbox_get()
Campbell Barton self-assigned this 2022-07-06 12:19:02 +02:00

This issue was referenced by 7fb8e475d9

This issue was referenced by 7fb8e475d9eca93bff87f011b29ac8aa7bc0ebca

This issue was referenced by 34c701abbd

This issue was referenced by 34c701abbdbfa6143c11e1b6f8d7797257c70237

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Added subscribers: @shadow_creeper, @OmarEmaraDev

Added subscribers: @shadow_creeper, @OmarEmaraDev
Member

Added subscriber: @Mustard

Added subscriber: @Mustard
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99270
No description provided.