Fix T99270: bones using empties as custom shapes can't be selected

Regression in [0] which didn't account for the bounds of empty objects.
Add support support calculating bounds from empty draw-type to use in
pose-bone culling.

[0]: 3267c91b4d5caab7da8aef071a446dd2e86f86a9